# v5

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  build.rs  entrypoint.sh  interclip.service
.github/workflows/: docker.yml  rust.yml
migrations/2024-01-07-130330_create_clips/: down.sql  up.sql
scripts/: copy-system-service.sh  db.sql  gitpod.env  gitpod.sh
src/: main.rs  models.rs  schema.rs  utils.rs
src/utils/: db.rs  files.rs  id.rs  log.rs  rate_limit.rs  redis.rs  structs.rs
