[package]
name = "interclip-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "23.0.1"
serde = "1.0.130"
serde_json = "1.0"
rand = "0.8.4"
chrono = "0.4.24"
url = { version = "2", features = ["serde"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]