[package]
name = "interclip-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "23.0.1"
redis = "0.22.3"
serde = "1.0.130"
serde_json = "1.0"
rand = "0.8.4"
chrono = "0.4.24"
url = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-lock = "2.4"
log = "0.4"
fern = "0.5"
git2 = "0.16.1"

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]